# smartmarket

./: .coverage  .env.sample  .gitignore  README.md  compose.yaml  makefile  openapi.yaml  pyproject.toml
src/: manage.py
src/catalog/: admin.py  api.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  validators.py  views.py
src/catalog/management/commands/: bootstrap_rbac.py  build_assistant_index.py  build_product_index.py  eval_search.py  seed_demo.py
src/catalog/migrations/: 0001_initial.py  0002_order.py
src/catalog/tests/: test_api.py  test_api_permissions.py  test_ml_api.py  test_ml_more.py  test_models.py  test_orders_api.py  test_rgpd_api.py  test_throttling.py  test_views.py
src/config/: settings.py  urls.py
src/config/settings/: base.py  dev.py  prod.py
src/ml/: assistant.py  assistant_index.py  cache.py  metrics.py  products_index.py  text.py  utils.py
src/ml/artifacts/: assistant_index.pkl  assistant_index_manifest.json  product_index.pkl  product_index_manifest.json  search_eval_1758206805.json  search_eval_latest.json
src/ml/eval/: queries_demo.json
src/static/: dev.css
src/templates/: base.html
src/templates/catalog/: product_detail.html  product_list.html
